<resources>
    <string name="app_name">FinalApp</string>

    <!-- Strings related to login and registration -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_duplicate_email">This email address already exists</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="registration_success">Registration successfull</string>

    <!--Strings related to adding a business -->
    <string name="prompt_business_name">Name</string>
    <string name="prompt_business_address">Address</string>
    <string name="prompt_business_city">City</string>
    <string name="prompt_business_postal">Postal</string>
    <string name="prompt_business_description">Description</string>
    <string name="action_add_business">Add Business</string>

    <string name = "check_button">check button</string>

    <string name="open">open</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shopping_cart">shopping cart</string>
    <string name="error_duplicate_category">This category already exists</string>
</resources>
