<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.matth.finalapp.fragments.AddRestaurantFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <ScrollView
            android:id="@+id/register_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/email_register_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/business_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/prompt_business_name"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/businaess_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/prompt_business_address"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/business_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/prompt_business_city"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/business_postal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.61"
                        android:hint="@string/prompt_business_postal"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/business_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.61"
                        android:hint="@string/prompt_business_description"
                        android:inputType="textMultiLine" />
                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your business settings :"
                    android:layout_marginLeft="5dp"
                    android:textSize="12sp"
                    android:textStyle="normal|bold" />

                <CheckBox
                    android:id="@+id/business_check_personnel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Personnel"
                    android:checked="true"/>
                <CheckBox
                    android:id="@+id/business_check_kitchen_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Kitchen/Bar view"
                    android:checked="true"/>

                <CheckBox
                    android:id="@+id/business_check_tables"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tables"
                    android:checked="true"/>
                <CheckBox
                    android:id="@+id/business_check_reservations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Reservations"/>



                <Button
                    android:id="@+id/action_add_business"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="attemptRegistration"
                    android:text="@string/action_add_business" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>





</FrameLayout>
